--- a/crmsystem_frontend/src/main/webapp/resources/css/blocks/main-content.less
+++ b/crmsystem_frontend/src/main/webapp/resources/css/blocks/main-content.less
@@ -135,3 +135,31 @@
 .left-navigation > .parent.open > a:before {
   transform: rotate(90deg);
 }
+
+* {
+  font-family: sans-serif;
+}
+.toggle-menu a {
+  display: block;
+  float: right;
+  padding: 5px 20px;
+  text-align: center;
+  background: none #F1B475;
+  cursor: pointer;
+}
+#menu-main {
+  background: none #FA982E;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  display: none;
+}
+#menu-main a {
+  display: block;
+  padding: 5px 20px;
+  text-decoration: none;
+}
+#menu-main a:hover,
+#menu-main a:focus {
+  background: none #D0812D;
+}
