create charts for Deals

--- a/crmsystem_frontend/src/main/webapp/resources/css/blocks/main-content.less
+++ b/crmsystem_frontend/src/main/webapp/resources/css/blocks/main-content.less
@@ -5,6 +5,11 @@
   position: absolute;
 }
 
+#chartdiv {
+  width	: 100%;
+  height	: 500px;
+}
+
 #fluid-wrapper {
   display: table-cell;
   vertical-align: top;
