--- a/crmsystem_frontend/src/main/webapp/resources/css/style.css
+++ b/crmsystem_frontend/src/main/webapp/resources/css/style.css
@@ -6,5 +6,10 @@
     clear: both;
 
 }
+#chartdiv {
+    width	: 100%;
+    height	: 500px;
+}
+
 
 .ui-autocomplete { height: 200px; overflow-y: scroll; overflow-x: hidden;}
