--- a/crmsystem_frontend/src/main/webapp/resources/css/style.css
+++ b/crmsystem_frontend/src/main/webapp/resources/css/style.css
@@ -61,3 +61,7 @@ html {
     padding-bottom: .25rem;
     border-bottom: 1px solid rgba(34,36,38,.15);
 }
+
+.commentblock {
+    padding-left: 30px;
+}
